--- a/style3.css
+++ b/style3.css
@@ -79,7 +79,7 @@ input {
 }  
 
 .formLista li img {
-	max-width: 62%%;
+	max-width: 62%;
   vertical-align: middle; 
   margin-bottom: 15px;
   border-radius: 5%;
