--- a/stylefinalizar.css
+++ b/stylefinalizar.css
@@ -4,7 +4,7 @@
 }
 
 body {
-	background: #e6e6fa;
+	background: #F9F9F9;
     font-family: "Arial", sans-serif;
 	font-size: 30px;
 	max-width: 100%;
